--- a/package-analytics/main/default/layouts/Package__c-Package Layout.layout-meta.xml
+++ b/package-analytics/main/default/layouts/Package__c-Package Layout.layout-meta.xml
@@ -26,10 +26,6 @@
                 <field>PackageCategory__c</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Readonly</behavior>
-                <field>TotalReleasedPackageVersions__c</field>
-            </layoutItems>
-            <layoutItems>
                 <behavior>Edit</behavior>
                 <field>LastUpdated__c</field>
             </layoutItems>
@@ -40,14 +36,22 @@
         <customLabel>true</customLabel>
         <detailHeading>true</detailHeading>
         <editHeading>true</editHeading>
-        <label>Subscriber Orgs Information</label>
+        <label>Summary Information</label>
+        <layoutColumns>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>TotalReleasedPackageVersions__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>TotalPackageVersions__c</field>
+            </layoutItems>
+        </layoutColumns>
         <layoutColumns>
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>TotalProductionPackageSubscriberOrgs__c</field>
             </layoutItems>
-        </layoutColumns>
-        <layoutColumns>
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>TotalPackageSubscriberOrgs__c</field>
