Added formula field on PackageSubscriberOrg__c to return the package version's PackageVersionNumber__c field value

--- a/package-analytics/main/default/layouts/PackageSubscriberOrg__c-Package Subscriber Org Layout.layout-meta.xml
+++ b/package-analytics/main/default/layouts/PackageSubscriberOrg__c-Package Subscriber Org Layout.layout-meta.xml
@@ -52,13 +52,17 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Readonly</behavior>
-                <field>PackageNamespacePrefix__c</field>
+                <field>PackageVersionNumberFormula__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
                 <behavior>Required</behavior>
                 <field>PackageSubscriberId__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Readonly</behavior>
+                <field>PackageNamespacePrefix__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
