Added new "viewer" permission set for read-only access

--- a/package-analytics/main/default/layouts/PackageSubscriberOrg__c-Package Subscriber Org Layout.layout-meta.xml
+++ b/package-analytics/main/default/layouts/PackageSubscriberOrg__c-Package Subscriber Org Layout.layout-meta.xml
@@ -103,7 +103,7 @@
     <showRunAssignmentRulesCheckbox>false</showRunAssignmentRulesCheckbox>
     <showSubmitAndAttachButton>false</showSubmitAndAttachButton>
     <summaryLayout>
-        <masterLabel>00h5Y00000K6tod</masterLabel>
+        <masterLabel>00h4x000007JSTn</masterLabel>
         <sizeX>4</sizeX>
         <sizeY>0</sizeY>
         <summaryLayoutStyle>Default</summaryLayoutStyle>
